yoshimi 2.0.2

2021-6-21 Will
* Waveform in guide mostly done.
  There is a lot of detail missing.
  It was never   doccumented :(

2021-6-21 Will
* BugFix: GUI scale kemap label not resizing.
* Completed Scales in guide.

2021-6-20 Will
* Small improvement to vector and midi learn in guide.
* Completed Resonance in guide.

2021-6-19 Will
* Filer now correctly sets default path in favorites.
* Small doc cleanups.
* Improved PadSynth Base Type layout.
  Profile menu named.

* Added further details to filer in manual.
* Various small adjustments and spelling checks.
* Added new PadSynth image.

2021-6-17 Will
* Manual now points to correct version.
* Prepared for minor release.
* Set release version to 2.0.2

2021-6-14 Will
* Moved examples directory into doc.
  Required by debian.

2021-6-13 Will
* Selecting directory from filer now needs double click.

2021-6-11 Will
* BugFix: first synth not seeing default state on resets.

2021-6-8 Will
* Added more cross-links in guide.

2021-6-7 Will
* MIDI learn guide almost complete.
* Small corrections to Vectors.
* Further small adustments and corrections to guide.

2021-6-6 Will
* BugFix: solo not restoring chanels when turned off.
* User Guide solo mostly done.

* Further manual corrections and adjustments.

* Completed Vectors.
* Completed Solo.
* Started MIDI learn guide.

2021-6-5 Will
* More work on User guide vectors.

2021-6-4 Will
* User guide work on Midi learn and Vectors.

2021-6-1 Will
* Merged in user guide updates from Lorenzo

2021-5-28 Will
* Implemented reseeding from CLI.
* Implemented Note On/Off from CLI.

* Changed 'Note' to 'Tone' to avoid contention.
  Note is used at part level, and expected in a
  short form, but could still be typed in full.

2021-5-17 Will
* BugFix: lockup importing corrupt scala files.
  Also adjusted fileMgr for odd text line ends.

2021-5-16 Will
* Small refinement to GUI Bank Root Paths window.

2021-5-15 Will
* Bugfix: GUI 1st slider wrong on waveform clear.